--- a/Project_v2/app/src/main/res/layout/facility_list.xml
+++ b/Project_v2/app/src/main/res/layout/facility_list.xml
@@ -9,6 +9,16 @@
     android:padding="24dp"
     tools:ignore="HardcodedText" >
 
+    <ImageButton
+        android:layout_marginStart="-16dp"
+        android:id="@+id/facility_edit_back_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#00FFFFFF"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/back" />
+
     <include
         android:id="@+id/notification_top_bar"
         layout="@layout/top_bar"
@@ -32,6 +42,7 @@
         app:layout_constraintTop_toBottomOf="@+id/notification_top_bar" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/facility_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
