Added the feature of of getting the details of a specific event by clicking on it using EventDetailsActivity.java

--- a/Project_v2/app/src/main/res/layout/homescreen.xml
+++ b/Project_v2/app/src/main/res/layout/homescreen.xml
@@ -72,10 +72,11 @@
             android:id="@+id/facility_list_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="32dp"
             android:text="Facility"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.809"
+            app:layout_constraintHorizontal_bias="0.583"
             app:layout_constraintStart_toEndOf="@+id/homescreen_fab" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
