Worked on CreateEventOptionsActivity, EventCreatorActivity, EventHomeActivity, EventOptionsActivity, EventControllerActivity and create_event.xml to add a facility for an event when creating an event

--- a/Project_v2/app/src/main/res/layout/create_event.xml
+++ b/Project_v2/app/src/main/res/layout/create_event.xml
@@ -118,6 +118,29 @@
 
     <!--    Hide text if event does not use geolocation-->
 
+    <!-- Dropdown for facilities -->
+    <TextView
+        android:id="@+id/textView_facility_selection"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Select Facility"
+        android:textColor="@color/lucky_white"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/create_event_rules_view" />
+
+    <Spinner
+        android:id="@+id/facility_spinner"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:backgroundTint="@color/lucky_white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView_facility_selection" />
+
+    <!-- Next button -->
     <Button
         android:id="@+id/create_event_next_button"
         style="@style/ActiveButton"
@@ -134,12 +157,12 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/create_event_rules_view" />
+        app:layout_constraintTop_toBottomOf="@id/facility_spinner" />
 
     <ImageView
         android:id="@+id/create_event_pic_view"
-        android:layout_width="0dp"
-        android:layout_height="200dp"
+        android:layout_width="357dp"
+        android:layout_height="107dp"
         android:layout_marginTop="24dp"
         android:background="@drawable/rounded_corners"
         android:clipToOutline="true"
