--- a/Project_v2/app/src/main/res/layout/homescreen_your_events_list_object.xml
+++ b/Project_v2/app/src/main/res/layout/homescreen_your_events_list_object.xml
@@ -71,6 +71,21 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
+        <Button
+            android:id="@+id/join_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Join Waiting List"
+            android:textSize="14sp"
+            android:textAllCaps="false"
+            android:layout_marginTop="8dp"
+            app:cornerRadius="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/your_event_waiting_text" />
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
