--- a/Project_v2/app/src/main/res/layout/entrant_list.xml
+++ b/Project_v2/app/src/main/res/layout/entrant_list.xml
@@ -92,7 +92,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView18" />
 
+    <!-- Updated RecyclerView with an ID -->
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/entrantRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
@@ -100,6 +102,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cancel_all_entrants_button" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
