--- a/Project_v2/app/src/main/res/layout/entrant_list.xml
+++ b/Project_v2/app/src/main/res/layout/entrant_list.xml
@@ -7,28 +7,9 @@
     android:background="@color/lucky_background"
     android:padding="32dp">
 
-    <ImageButton
-        android:id="@+id/entrant_list_back_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="-16dp"
-        android:backgroundTint="#00FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/back" />
-
-    <TextView
-        android:id="@+id/entrant_list_banner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:fontFamily="@font/airbnbcereal_w_bd"
-        android:text="Entrant List"
-        android:textColor="@color/lucky_white"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/entrant_list_back_button"
-        app:layout_constraintStart_toEndOf="@+id/entrant_list_back_button"
-        app:layout_constraintTop_toTopOf="@+id/entrant_list_back_button" />
+    <include
+        android:id="@+id/top_bar"
+        layout="@layout/top_bar" />
 
     <TextView
         android:id="@+id/textView18"
@@ -44,7 +25,7 @@
         android:textColor="@color/lucky_white"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/entrant_list_back_button" />
+        app:layout_constraintTop_toBottomOf="@+id/top_bar" />
 
     <Spinner
         android:id="@+id/entrant_list_dropdown"
@@ -92,7 +73,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView18" />
 
-    <!-- Updated RecyclerView with an ID -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/entrantRecyclerView"
         android:layout_width="0dp"
