--- a/Project_v2/app/src/main/res/layout/event_landing_page_organiser.xml
+++ b/Project_v2/app/src/main/res/layout/event_landing_page_organiser.xml
@@ -170,9 +170,22 @@
         app:cornerRadius="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/event_deadline_view"
-        app:layout_constraintVertical_bias="0.35000002" />
+        app:layout_constraintVertical_bias="0.038" />
+
+    <Button
+        android:id="@+id/view_entrant_list_button"
+        style="@style/ActiveButton"
+        android:layout_width="142dp"
+        android:layout_height="62dp"
+        android:text="Entrant"
+        app:layout_constraintBottom_toTopOf="@+id/textView5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/event_picture" />
 
     <TextView
         android:id="@+id/geolocation_warning_view"
@@ -237,5 +250,17 @@
         app:layout_constraintStart_toEndOf="@+id/event_price_view"
         app:layout_constraintTop_toBottomOf="@+id/event_countdown_view"
         app:srcCompat="@drawable/edit_picture" />
+
+    <TextView
+        android:id="@+id/event_id_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:text="Event ID"
+        app:layout_constraintBottom_toTopOf="@+id/event_edit_button"
+        app:layout_constraintEnd_toEndOf="@+id/event_picture"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@id/event_name_view"
+        app:layout_constraintTop_toBottomOf="@+id/event_more_button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
