--- a/Project_v2/app/src/main/res/layout/homescreen.xml
+++ b/Project_v2/app/src/main/res/layout/homescreen.xml
@@ -46,14 +46,15 @@
 
         </com.google.android.material.tabs.TabLayout>
 
-
+<!--Better do-->
         <!-- Add the RecyclerView for displaying events -->
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:cardCornerRadius="16dp"
             app:cardBackgroundColor="@color/black"
-            app:cardElevation="4dp"> <!-- Shadow effect -->
+            app:cardElevation="4dp"
+            tools:ignore="MissingConstraints"> <!-- Shadow effect -->
 
         </androidx.cardview.widget.CardView>
 
