- Connected all pages to the Home Screen - Populated Home Screen tabs with relevant Recycler View items - Tweaked certain UI elements to adhere to Figma designs - Encapsulate code where possible

--- a/Project_v2/app/src/main/res/layout/event_overlay.xml
+++ b/Project_v2/app/src/main/res/layout/event_overlay.xml
@@ -4,9 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/rounded_overlay"
-    android:backgroundTint="@color/lucky_uiEmphasis"
-    android:padding="32dp">
+    android:background="@color/lucky_background"
+    android:padding="24dp">
 
     <Button
         android:id="@+id/delete_event_button"
