--- a/Project_v2/app/src/main/res/layout/event_edit_overlay.xml
+++ b/Project_v2/app/src/main/res/layout/event_edit_overlay.xml
@@ -4,14 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/rounded_overlay"
-    android:padding="32dp">
+    android:background="@color/lucky_background"
+    android:padding="24dp">
 
     <EditText
         android:id="@+id/edit_event_attendees_num_view"
         style="@style/RoundedEditTextStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:fontFamily="@font/airbnbcereal_w_bk"
         android:hint="@string/create_event_attendees_num_text"
         android:inputType="number"
@@ -21,20 +22,17 @@
         android:textColor="@color/lucky_white"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="32dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <TextView
         android:id="@+id/textView9"
         style="@style/GenericText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:fontFamily="@font/airbnbcereal_w_bk"
         android:text="Number of Attendees"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/edit_event_attendees_num_view"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -117,7 +115,7 @@
         style="@style/InactiveButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="32dp"
         android:text="Choose Attendees"
         android:textAllCaps="false"
         android:textColor="@color/lucky_white"
@@ -132,6 +130,7 @@
         style="@style/ActiveButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:drawableEnd="@drawable/right_arrow"
         android:text="Entrant List"
         android:textAllCaps="false"
