--- a/Project_v2/app/src/main/res/layout/event_landing_page_organiser.xml
+++ b/Project_v2/app/src/main/res/layout/event_landing_page_organiser.xml
@@ -5,12 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="32dp"
+    android:padding="24dp"
     android:clipToPadding="false"
     android:background="@color/lucky_background">
 
     <ImageView
-        android:id="@+id/event_picture"
+        android:id="@+id/event_picture_organiser"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="-32dp"
@@ -24,23 +24,32 @@
         app:tint="#404040"
         app:tintMode="multiply" />
 
+    <include
+        android:id="@+id/notification_top_bar"
+        layout="@layout/top_bar_clear"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/textView5"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="32dp"
         android:fontFamily="@font/airbnbcereal_w_bd"
         android:text="Details"
         android:textAlignment="textStart"
         android:textColor="@color/lucky_white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/event_price_view" />
+        app:layout_constraintTop_toBottomOf="@+id/view_entrant_list_button" />
 
     <TextView
-        android:id="@+id/event_name_view"
+        android:id="@+id/event_name_view_organiser"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/airbnbcereal_w_bd"
@@ -51,39 +60,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/event_back_button" />
-
-    <ImageButton
-        android:layout_marginStart="-16dp"
-        android:id="@+id/event_back_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#00FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/back" />
-
-    <ImageButton
-        android:id="@+id/event_more_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#00FFFFFF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/more" />
-
-    <TextView
-        android:id="@+id/event_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:fontFamily="@font/airbnbcereal_w_bd"
-        android:text="Event"
-        android:textColor="@color/lucky_white"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/event_back_button"
-        app:layout_constraintStart_toEndOf="@+id/event_back_button"
-        app:layout_constraintTop_toTopOf="@+id/event_back_button" />
+        app:layout_constraintTop_toBottomOf="@+id/notification_top_bar" />
 
     <TextView
         android:id="@+id/textView2"
@@ -97,7 +74,7 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/event_details_view" />
+        app:layout_constraintTop_toBottomOf="@+id/event_details_view_organiser" />
 
     <TextView
         android:id="@+id/textView6"
@@ -111,14 +88,15 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/event_rules_view" />
+        app:layout_constraintTop_toBottomOf="@+id/event_rules_view_organiser" />
 
     <TextView
-        android:id="@+id/event_details_view"
+        android:id="@+id/event_details_view_organiser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/airbnbcereal_w_bk"
         android:text="@string/event_description_text"
+        android:textAlignment="viewStart"
         android:textColor="@color/lucky_white"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -127,7 +105,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <TextView
-        android:id="@+id/event_rules_view"
+        android:id="@+id/event_rules_view_organiser"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/airbnbcereal_w_bk"
@@ -140,7 +118,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
-        android:id="@+id/event_deadline_view"
+        android:id="@+id/event_deadline_view_organiser"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/airbnbcereal_w_bk"
@@ -160,6 +138,7 @@
         style="@style/ActiveButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         android:drawableLeft="@drawable/qrscanner_icon"
         android:drawablePadding="8dp"
         android:fontFamily="@font/airbnbcereal_w_bd"
@@ -170,9 +149,8 @@
         app:cornerRadius="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/event_deadline_view"
+        app:layout_constraintTop_toBottomOf="@+id/event_deadline_view_organiser"
         app:layout_constraintVertical_bias="0.038" />
 
     <Button
@@ -180,12 +158,11 @@
         style="@style/ActiveButton"
         android:layout_width="142dp"
         android:layout_height="62dp"
+        android:layout_marginTop="32dp"
         android:text="Entrant"
-        app:layout_constraintBottom_toTopOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/event_picture" />
+        app:layout_constraintTop_toBottomOf="@+id/event_picture_organiser" />
 
     <TextView
         android:id="@+id/geolocation_warning_view"
@@ -202,7 +179,7 @@
         app:layout_constraintTop_toBottomOf="@+id/qrcode_button" />
 
     <TextView
-        android:id="@+id/event_countdown_view"
+        android:id="@+id/event_countdown_view_organiser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -219,10 +196,10 @@
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/event_name_view" />
+        app:layout_constraintTop_toBottomOf="@+id/event_name_view_organiser" />
 
     <TextView
-        android:id="@+id/event_price_view"
+        android:id="@+id/event_price_view_organiser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
@@ -238,7 +215,7 @@
         android:textColor="@color/lucky_white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/event_countdown_view" />
+        app:layout_constraintTop_toBottomOf="@+id/event_countdown_view_organiser" />
 
     <ImageButton
         android:id="@+id/event_edit_button"
@@ -247,20 +224,8 @@
         android:layout_marginStart="104dp"
         android:layout_marginTop="20dp"
         android:background="#00FFFFFF"
-        app:layout_constraintStart_toEndOf="@+id/event_price_view"
-        app:layout_constraintTop_toBottomOf="@+id/event_countdown_view"
+        app:layout_constraintStart_toEndOf="@+id/event_price_view_organiser"
+        app:layout_constraintTop_toBottomOf="@+id/event_countdown_view_organiser"
         app:srcCompat="@drawable/edit_picture" />
-
-    <TextView
-        android:id="@+id/event_id_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:text="Event ID"
-        app:layout_constraintBottom_toTopOf="@+id/event_edit_button"
-        app:layout_constraintEnd_toEndOf="@+id/event_picture"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@id/event_name_view"
-        app:layout_constraintTop_toBottomOf="@+id/event_more_button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
