--- a/Project_v2/app/src/main/res/layout/event_landing_page_user.xml
+++ b/Project_v2/app/src/main/res/layout/event_landing_page_user.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="32dp"
+    android:padding="24dp"
     android:clipToPadding="false"
     android:background="@color/lucky_background">
 
@@ -23,6 +23,15 @@
         app:srcCompat="@drawable/placeholder_event"
         app:tint="#404040"
         app:tintMode="multiply" />
+
+    <include
+        android:id="@+id/notification_top_bar"
+        layout="@layout/top_bar_clear"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView5"
@@ -51,40 +60,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/event_back_button" />
-
-    <ImageButton
-        android:id="@+id/event_back_button"
-        android:layout_marginStart="-16dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#00FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/back" />
-
-    <ImageButton
-        android:id="@+id/event_more_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#00FFFFFF"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/more" />
-
-    <TextView
-        android:id="@+id/event_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:fontFamily="@font/airbnbcereal_w_bd"
-        android:text="Event"
-        android:textColor="@color/lucky_white"
-        android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/event_back_button"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/notification_top_bar" />
 
     <TextView
         android:id="@+id/textView2"
@@ -120,6 +96,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/airbnbcereal_w_bk"
         android:text="@string/event_description_text"
+        android:textAlignment="viewStart"
         android:textColor="@color/lucky_white"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
