--- a/Project_v2/app/src/main/res/layout/facility_create_page.xml
+++ b/Project_v2/app/src/main/res/layout/facility_create_page.xml
@@ -5,7 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/lucky_background"
-    android:padding="32dp">
+    android:padding="24dp">
+
+    <include
+        android:id="@+id/notification_top_bar"
+        layout="@layout/top_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!--Facility Name-->
 
@@ -59,7 +68,7 @@
     <EditText
         android:id="@+id/facility_edit_description_view"
         style="@style/RoundedEditTextStyle"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/airbnbcereal_w_bk"
@@ -70,30 +79,6 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
-
-    <ImageButton
-        android:layout_marginStart="-16dp"
-        android:id="@+id/facility_edit_back_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#00FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/back" />
-
-    <TextView
-        android:id="@+id/facility_banner_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:fontFamily="@font/airbnbcereal_w_bd"
-        android:text="Create Facility"
-        android:textColor="@color/lucky_white"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/facility_edit_back_button"
-        app:layout_constraintStart_toEndOf="@+id/facility_edit_back_button"
-        app:layout_constraintTop_toTopOf="@+id/facility_edit_back_button" />
-
 
     <ImageView
         android:id="@+id/create_event_pic_view"
@@ -106,7 +91,7 @@
         android:src="@drawable/placeholder_event"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/facility_banner_text"
+        app:layout_constraintTop_toBottomOf="@+id/notification_top_bar"
         app:tint="#404040"
         app:tintMode="multiply" />
 
