--- a/Project_v2/app/src/main/res/layout/profile_admin_overlay.xml
+++ b/Project_v2/app/src/main/res/layout/profile_admin_overlay.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/rounded_overlay"
+    android:background="@color/lucky_background"
     android:backgroundTint="@color/lucky_uiEmphasis"
     android:padding="32dp">
 
