--- a/Project_v2/app/src/main/res/layout/send_notification_overlay.xml
+++ b/Project_v2/app/src/main/res/layout/send_notification_overlay.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/rounded_overlay"
-    android:padding="32dp">
+    android:background="@color/lucky_background"
+    android:padding="24dp">
 
     <TextView
         android:id="@+id/textView9"
