--- a/Project_v2/app/src/main/res/layout/facility_landing_page.xml
+++ b/Project_v2/app/src/main/res/layout/facility_landing_page.xml
@@ -8,21 +8,6 @@
     android:clipToPadding="false"
     android:padding="24dp">
 
-    <ImageView
-        android:id="@+id/facility_picture"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="-32dp"
-        android:layout_marginTop="-32dp"
-        android:layout_marginEnd="-32dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/placeholder_event"
-        app:tint="#404040"
-        app:tintMode="multiply" />
-
     <include
         android:id="@+id/notification_top_bar"
         layout="@layout/top_bar_clear"
@@ -33,20 +18,19 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/event_edit_button"
+        android:id="@+id/facility_edit_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#00FFFFFF"
-        app:layout_constraintBottom_toBottomOf="@+id/facility_picture"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/facility_picture"
+        app:layout_constraintTop_toBottomOf="@+id/event_name_view"
         app:srcCompat="@drawable/edit_picture" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="32dp"
         android:fontFamily="@font/airbnbcereal_w_bd"
         android:text="Description"
         android:textAlignment="textStart"
@@ -55,7 +39,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/facility_picture" />
+        app:layout_constraintTop_toBottomOf="@+id/facility_edit_button" />
 
     <TextView
         android:id="@+id/event_name_view"
@@ -67,26 +51,10 @@
         android:textAlignment="center"
         android:textColor="@color/lucky_white"
         android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/facility_picture"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/notification_top_bar"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="0dp"
-        android:layout_height="32dp"
-        android:layout_marginTop="24dp"
-        android:fontFamily="@font/airbnbcereal_w_bd"
-        android:text="Events"
-        android:textAlignment="textStart"
-        android:textColor="@color/lucky_white"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/facility_description_view" />
+        app:layout_constraintTop_toBottomOf="@+id/notification_top_bar" />
 
     <TextView
         android:id="@+id/facility_description_view"
@@ -101,16 +69,6 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/facility_event_list_recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginBottom="-32dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
