Create Button '+' shows up only if you're an organizer

--- a/Project_v2/app/src/main/res/layout/homescreen.xml
+++ b/Project_v2/app/src/main/res/layout/homescreen.xml
@@ -22,7 +22,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/lucky_background"
-
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/include"
@@ -66,7 +65,8 @@
             app:backgroundTint="@color/lucky_uiAccent"
             app:layout_constraintBottom_toBottomOf="@+id/viewPager2"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            />
 
         <ImageButton
             android:id="@+id/refreshButton"
@@ -89,8 +89,6 @@
         android:layout_gravity="start"
         android:background="@color/lucky_background"
         app:headerLayout="@layout/homescreen_nav_bar_header"
-        app:menu="@menu/homescreen_nav_bar_menu"
-        app:itemIconTint="@color/lucky_white"
-        app:itemTextColor="@color/lucky_white"/>
+        app:menu="@menu/homescreen_nav_bar_menu" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
