--- a/Project_v2/app/src/main/res/values/styles.xml
+++ b/Project_v2/app/src/main/res/values/styles.xml
@@ -9,8 +9,8 @@
         <item name="android:background">@drawable/rounded_edittext</item>
         <item name="android:padding">14dp</item>
         <item name="android:fontFamily">@font/airbnbcereal_w_bk</item>
-        <item name="android:textColor">@color/lucky_grey</item>
-        <item name="android:textColorHint">@color/lucky_grey</item>
+        <item name="android:textColor">@color/lucky_offwhite</item>
+        <item name="android:textColorHint">@color/lucky_offwhite</item>
         <item name="android:textSize">16sp</item>
     </style>
 
