--- a/Project_v2/app/src/main/res/layout/create_event_options.xml
+++ b/Project_v2/app/src/main/res/layout/create_event_options.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/airbnbcereal_w_bk"
-        android:hint="1000"
+        android:hint=""
         android:inputType="number"
         android:padding="8dp"
         android:text="@string/create_event_entrants_num_text"
@@ -39,6 +39,7 @@
         android:text="@string/create_event_deadline_text"
         android:textAlignment="textStart"
         android:textColor="@color/lucky_white"
+        android:textColorHint="@android:color/darker_gray"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -70,6 +71,7 @@
         android:text="@string/create_event_deadline_text"
         android:textAlignment="textStart"
         android:textColor="@color/lucky_white"
+        android:textColorHint="@android:color/darker_gray"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -95,7 +97,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/airbnbcereal_w_bk"
-        android:hint="50"
+        android:hint=""
         android:inputType="number"
         android:padding="8dp"
         android:text="@string/create_event_deadline_text"
@@ -191,7 +193,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/airbnbcereal_w_bk"
-        android:hint="20"
+        android:hint=""
         android:inputType="number"
         android:padding="8dp"
         android:text="@string/create_event_attendees_num_text"
