--- a/Project_v2/app/src/main/res/layout/entrant_list_object.xml
+++ b/Project_v2/app/src/main/res/layout/entrant_list_object.xml
@@ -37,7 +37,7 @@
         android:textAlignment="textStart"
         android:textAllCaps="false"
         android:textSize="16sp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:cornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,7 +56,7 @@
         android:textAlignment="textStart"
         android:textAllCaps="false"
         android:textSize="16sp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:cornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
